c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_member_storage_class.c
struct y {
    // structure member cannot have storage class
    static int a;
};